<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/some_id"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="7dp"
                android:text="@string/some_id1"
                android:textAppearance="@style/some_id" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle_3"
                android:gravity="center"
                android:text="@string/some_id11"
                android:textAppearance="@style/some_id" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="7dp"
                android:text="02"
                android:textAppearance="@style/some_id" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle_3"
                android:gravity="center"
                android:text="@string/some_id22"
                android:textAppearance="@style/some_id" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView


                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="7dp"
                android:text="@string/some_id3"
                android:textAppearance="@style/some_id" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle_3"
                android:gravity="center"
                android:text="@string/some_id33"
                android:textAppearance="@style/some_id" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="7dp"
                android:text="@string/some_id4"
                android:textAppearance="@style/some_id" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle_3"
                android:gravity="center"
                android:text="@string/some_id44"
                android:textAppearance="@style/some_id" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/some_id1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="7dp"
                android:text="@string/some_id5"
                android:textAppearance="@style/some_id" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle_3"
                android:gravity="center"
                android:text="@string/some_id55"
                android:textAppearance="@style/some_id" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>