<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/some_id">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:id="@+id/line_10"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="12.98dp"
            android:background="@drawable/clear"
            android:backgroundTint="#000000" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="260dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rectangle_1" />

        <TextView
            android:id="@+id/imageButton"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/favorite"
            android:text="5"
            android:textAlignment="center"
            android:textColor="#FBFBFB"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|top"
        android:rotationX="6"
        android:text="0/5"
        android:textAppearance="@style/some_id"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="7dp"
            android:text="@string/some_id1"
            android:textAppearance="@style/some_id" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangle_3"
            android:gravity="center"
            android:text="@string/some_id11"
            android:textAppearance="@style/some_id" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/error"
            android:scaleType="centerCrop"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="7dp"
            android:text="02"
            android:textAppearance="@style/some_id" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangle_3"
            android:gravity="center"
            android:text="@string/some_id22"
            android:textAppearance="@style/some_id" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/error"
            android:scaleType="centerCrop"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="7dp"
            android:text="@string/some_id3"
            android:textAppearance="@style/some_id" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangle_3"
            android:gravity="center"
            android:text="@string/some_id33"
            android:textAppearance="@style/some_id" />
        <ImageView
            android:id="@+id/image3"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/error"
            android:scaleType="centerCrop"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="7dp"
            android:text="@string/some_id4"
            android:textAppearance="@style/some_id" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangle_3"
            android:gravity="center"
            android:text="@string/some_id44"
            android:textAppearance="@style/some_id" />
        <ImageView
            android:id="@+id/image4"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/error"
            android:scaleType="centerCrop"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/some_id1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="7dp"
            android:text="@string/some_id5"
            android:textAppearance="@style/some_id" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangle_3"
            android:gravity="center"
            android:text="@string/some_id55"
            android:textAppearance="@style/some_id" />
        <ImageView

            android:id="@+id/image5"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/error"
            android:scaleType="centerCrop"></ImageView>
    </LinearLayout>

    <!-- 05 -->
    <TextView
        android:id="@+id/againGameF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="Пройти заново"
        android:textSize="18sp">


    </TextView>

    <Button
        android:textAllCaps="false"
        android:id="@+id/tomain"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backgroundTint="@null"
        android:background="@drawable/nav_btn"
        android:text="В главную" />
</LinearLayout>


